// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component testing Input 1`] = `
<DocumentFragment>
  <input
    class="sc-AxjAm dtCcCs"
  />
</DocumentFragment>
`;

exports[`Input component testing Input disabled 1`] = `
<DocumentFragment>
  <input
    class="sc-AxjAm dtCcCs"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Input component testing Input error 1`] = `
<DocumentFragment>
  <input
    class="sc-AxjAm hlMGIk"
  />
</DocumentFragment>
`;

exports[`Input component testing Input multiline 1`] = `
<DocumentFragment>
  <textarea
    class="sc-AxjAm dtCcCs"
  />
</DocumentFragment>
`;
